--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "axios": "^0.17.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.16"
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "1.0.16",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
